# metadata-service

./: .gitignore  .gitmodules  Dockerfile  README.md  compile_proto.sh  compile_protos.sh  env_development  pyproject.toml  setup.cfg
.github/workflows/: publish-docker-image.yml
docs/: diagram.md
src/dataclay_mds/: metadata_service.py
src/dataclay_mds/conf/: __init__.py
src/dataclay_mds/core/: exceptions.py
src/dataclay_mds/etcd/: client.py  etcd_handler.py
src/dataclay_mds/etcd/protos/: etcd_model.proto
src/dataclay_mds/grpc/: metadata_service.proto
src/dataclay_mds/grpc/protos/: compile_proto.sh  metadata_service.proto
src/dataclay_mds/grpc/servicer/: metadata_service_servicer.py
src/dataclay_mds/logic/: account_manager.py  dataclay_manager.py  dataset_manager.py  executionenvironment_manager.py  session_manager.py
src/dataclay_mds/proto/: etcd_model.proto
src/dataclay_mds/protos/: metadata_service_pb2.py  metadata_service_pb2_grpc.py
src/dataclay_mds/server/: __main__.py  metadata_service_srv.py
src/dataclay_mds/tool/: __main__.py  functions.py
