[metadata]
name = dataClay-mds
version = 0.0.1
description = Dataclay Metadata Service
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.bsc.es/research-and-development/software-and-apps/software-list/dataclay
project_urls =
    Bug Tracker = https://www.bsc.es/research-and-development/software-and-apps/software-list/dataclay

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    dataclay-common
    grpcio~=1.46.3
    protobuf~=3.19.0
    etcd3~=0.12.0
    opentelemetry-api

[options.packages.find]
where = src